{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 114,
  "lineage": "e81aa945-0ef1-3dbe-3d7c-27f929253239",
  "resources": [
    {
      "module": "module.vpc_playground",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "module.vpc_playground.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2c8caa4b6378d8c",
            "arn": "arn:aws:ec2:us-east-1:767398041426:instance/i-0dec4d0bfe596d74d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dec4d0bfe596d74d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04f6359d2a4e121fc",
            "private_dns": "ip-10-0-1-230.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.230",
            "public_dns": "ec2-3-88-57-179.compute-1.amazonaws.com",
            "public_ip": "3.88.57.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-046766ac04fa65819",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e8067cbc87bf41d0",
            "tags": {
              "Name": "playground"
            },
            "tags_all": {
              "Name": "playground"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ce9e6a02c9e0e1b4"
            ]
          },
          "dependencies": [
            "module.vpc_playground.aws_key_pair.key_pair",
            "module.vpc_playground.aws_security_group.allow_ssh",
            "module.vpc_playground.aws_subnet.public_subnet",
            "module.vpc_playground.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_playground",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "module.vpc_playground.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398041426:internet-gateway/igw-0a421d2dc1244382b",
            "id": "igw-0a421d2dc1244382b",
            "owner_id": "767398041426",
            "tags": {
              "Name": "MyInternetGateway"
            },
            "tags_all": {
              "Name": "MyInternetGateway"
            },
            "vpc_id": "vpc-0b0cc2cfa07aa9b94"
          },
          "dependencies": [
            "module.vpc_playground.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_playground",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "module.vpc_playground.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398041426:route-table/rtb-031a42ee1192bec5b",
            "id": "rtb-031a42ee1192bec5b",
            "owner_id": "767398041426",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a421d2dc1244382b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyRouteTable"
            },
            "tags_all": {
              "Name": "MyRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0cc2cfa07aa9b94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_playground.aws_internet_gateway.internet_gateway",
            "module.vpc_playground.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_playground",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "module.vpc_playground.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0624546ddc9d1682c",
            "route_table_id": "rtb-031a42ee1192bec5b",
            "subnet_id": "subnet-0e8067cbc87bf41d0"
          },
          "dependencies": [
            "module.vpc_playground.aws_internet_gateway.internet_gateway",
            "module.vpc_playground.aws_route_table.route_table",
            "module.vpc_playground.aws_subnet.public_subnet",
            "module.vpc_playground.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_playground",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "module.vpc_playground.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398041426:security-group/sg-0ce9e6a02c9e0e1b4",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce9e6a02c9e0e1b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "767398041426",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0cc2cfa07aa9b94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_playground.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_playground",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.vpc_playground.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398041426:subnet/subnet-0e8067cbc87bf41d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8067cbc87bf41d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767398041426",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet"
            },
            "tags_all": {
              "Name": "PublicSubnet"
            },
            "vpc_id": "vpc-0b0cc2cfa07aa9b94"
          },
          "dependencies": [
            "module.vpc_playground.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_playground",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.vpc_playground.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398041426:vpc/vpc-0b0cc2cfa07aa9b94",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-040fb6801aa767dd7",
            "default_route_table_id": "rtb-06c637bd460ea36ab",
            "default_security_group_id": "sg-04ff53c720277ef66",
            "dhcp_options_id": "dopt-0bf4160a1bf0f8787",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b0cc2cfa07aa9b94",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c637bd460ea36ab",
            "owner_id": "767398041426",
            "tags": {
              "Name": "MyVPC"
            },
            "tags_all": {
              "Name": "MyVPC"
            }
          }
        }
      ]
    }
  ]
}